# MyAnimeListDashboard

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
app/: charts.py  data.py  home_page.py  main.py  readme_page.py
notebooks/: duckdb.ipynb  genres.ipynb  splitting.ipynb
